fix: pause animation avoid overflow

--- a/src/features/pomodoro/Pomodoro.module.scss
+++ b/src/features/pomodoro/Pomodoro.module.scss
@@ -65,7 +65,7 @@
 	50% {
 		opacity: 1;
 		color: $orange;
-		transform: scale(1.1);
+		transform: scale(1);
 	}
 
 	100% {
